--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3486,8 +3486,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Operar con punto verde", 157, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 198, 89, 10
   CONTROL "Totalizar albaranes", 156, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 211, 73, 10
   CONTROL "No editar sus datos en ventas", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 363, 224, 121, 10
-  CONTROL "", 232, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 236, 36, 11
-  CONTROL "", 233, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 451, 236, 36, 11
+  CONTROL "", 232, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 234, 36, 11
+  CONTROL "", 233, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 451, 234, 36, 11
+  CONTROL "", 350, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 412, 247, 75, 11
   CONTROL "Código", -1, "Static", WS_GROUP, 47, 39, 32, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 47, 51, 29, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 47, 65, 32, 8
@@ -3522,6 +3523,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Teléfono 2", -1, "Static", WS_GROUP, 363, 78, 35, 8
   CONTROL "Combinado", -1, "Static", WS_GROUP, 363, 161, 41, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 47, 199, 34, 8
+  CONTROL "Alta", -1, "Static", WS_GROUP, 363, 250, 17, 10
 }
 
 CLIENT_10 DIALOG DISCARDABLE 32, 32, 496, 266
