--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6636,66 +6636,57 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 180, "Edit", WS_BORDER, 178, 60, 177, 11
   CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 103, 72, 72, 11
   CONTROL "", 351, "Edit", WS_BORDER, 178, 72, 177, 11
-  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 417, 106, 241, 11
-  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 105, 72, 11
-  CONTROL "Impresa", 120, "Button", BS_AUTOCHECKBOX, 178, 106, 41, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 230, 105, 72, 11
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 305, 105, 50, 11
-  CONTROL "Exp. EDI", 130, "Button", BS_AUTOCHECKBOX, 178, 118, 46, 10
-  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 230, 117, 72, 11
-  CONTROL "", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 305, 117, 50, 11
-  CONTROL "Enviar mail", 135, "Button", BS_AUTOCHECKBOX, 178, 130, 47, 10
-  CONTROL "", 136, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 230, 129, 72, 11
-  CONTROL "", 137, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 305, 129, 50, 11
+  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 186, 554, 11
+  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 235, 113, 120, 11
+  CONTROL "Impresa", 120, "Button", BS_AUTOCHECKBOX, 370, 114, 41, 10
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 417, 113, 84, 11
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 503, 113, 154, 11
+  CONTROL "Exp. EDI", 130, "Button", BS_AUTOCHECKBOX, 370, 127, 46, 10
+  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 417, 126, 84, 11
+  CONTROL "", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 503, 126, 154, 11
+  CONTROL "Enviar mail", 135, "Button", BS_AUTOCHECKBOX, 370, 140, 47, 10
+  CONTROL "", 136, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 417, 139, 84, 11
+  CONTROL "", 137, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 503, 139, 154, 11
   CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 417, 24, 70, 11
   CONTROL "", 236, "Edit", WS_BORDER|WS_TABSTOP, 489, 24, 168, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 417, 36, 240, 11
   CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 417, 48, 84, 11
   CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 60, 84, 11
-  CONTROL "General", 410, "Button", BS_AUTORADIOBUTTON, 50, 157, 38, 10
+  CONTROL "General", 410, "Button", BS_AUTORADIOBUTTON, 50, 116, 38, 10
   CONTROL "", 162, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 72, 84, 11
-  CONTROL "Unión Europea", 411, "Button", BS_AUTORADIOBUTTON, 50, 169, 61, 10
+  CONTROL "Unión Europea", 411, "Button", BS_AUTORADIOBUTTON, 50, 128, 61, 10
   CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 48, 110, 11
-  CONTROL "Exento", 412, "Button", BS_AUTORADIOBUTTON, 50, 181, 35, 10
+  CONTROL "Exento", 412, "Button", BS_AUTORADIOBUTTON, 50, 140, 35, 10
   CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 60, 110, 11
-  CONTROL "Exportación", 413, "Button", BS_AUTORADIOBUTTON, 50, 193, 51, 10
+  CONTROL "Exportación", 413, "Button", BS_AUTORADIOBUTTON, 50, 152, 51, 10
   CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 72, 110, 11
-  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 158, 428, 29
-  CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 188, 428, 29
-  CONTROL "A&gregar", 270, "Button", WS_TABSTOP, 48, 317, 50, 14
-  CONTROL "Ag. de c&liente", 400, "Button", WS_TABSTOP, 48, 332, 50, 14
-  CONTROL "", 290, "TXBrowse", WS_TABSTOP|0x00300000, 102, 317, 400, 50
-  CONTROL "0", 480, "Static", SS_RIGHT|WS_GROUP, 585, 317, 70, 10
+  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 199, 554, 80
+  CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 282, 554, 80
   CONTROL "Entrega", -1, "Static", WS_GROUP, 370, 75, 46, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 174, 145, 489, 76
-  CONTROL "Comentarios", -1, "Static", WS_GROUP, 178, 189, 44, 8
-  CONTROL "Observaciones", -1, "Static", WS_GROUP, 178, 159, 52, 8
-  CONTROL "Condiciones", -1, "Static", WS_GROUP, 370, 109, 44, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 172, 619, 199
+  CONTROL "Comentarios", -1, "Static", WS_GROUP, 50, 282, 44, 8
+  CONTROL "Observaciones", -1, "Static", WS_GROUP, 50, 200, 52, 8
+  CONTROL "Condiciones", -1, "Static", WS_GROUP, 50, 189, 44, 8
   CONTROL "Retirado por", -1, "Static", WS_GROUP, 370, 40, 46, 8
   CONTROL "Matrícula", -1, "Static", WS_GROUP, 370, 51, 46, 8
-  CONTROL "Pendiente", -1, "Static", WS_GROUP, 518, 317, 44, 10
   CONTROL "Proyecto", -1, "Static", WS_GROUP, 50, 63, 44, 8
-  CONTROL "Su pedido", -1, "Static", WS_GROUP, 50, 108, 37, 8
+  CONTROL "Su pedido", -1, "Static", WS_GROUP, 182, 116, 37, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 44, 18, 316, 82
   CONTROL "Transport.", -1, "Static", WS_GROUP, 370, 27, 46, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 50, 51, 44, 8
   CONTROL "Bultos", -1, "Static", WS_GROUP, 370, 63, 46, 8
-  CONTROL "Anticipos", -1, "Button", BS_GROUPBOX, 44, 306, 465, 65
-  CONTROL "&Quitar", 280, "Button", WS_TABSTOP, 48, 347, 50, 14
   CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 39, 44, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 365, 18, 298, 82
   CONTROL "TARA", -1, "Static", WS_GROUP, 505, 51, 25, 8
   CONTROL "Peso ", -1, "Static", WS_GROUP, 505, 63, 23, 8
   CONTROL "Diferencia ", -1, "Static", WS_GROUP, 505, 75, 39, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 513, 305, 150, 66
-  CONTROL "", 163, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 117, 72, 11
-  CONTROL "Su albarán", -1, "Static", WS_GROUP, 50, 120, 46, 8
+  CONTROL "", 163, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 235, 126, 120, 11
+  CONTROL "Su albarán", -1, "Static", WS_GROUP, 182, 129, 46, 8
   CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 27, 44, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Factura cliente", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 44, 145, 127, 76
-  CONTROL "", 4002, "Button", BS_GROUPBOX, 365, 98, 298, 45
-  CONTROL "", 4003, "Button", BS_GROUPBOX, 44, 98, 316, 45
+  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 44, 104, 128, 65
+  CONTROL "", -1, "Button", BS_GROUPBOX, 176, 104, 487, 65
   CONTROL "", 800, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 178, 84, 177, 91
   CONTROL "Organismo tramitación facturae", -1, "Static", WS_GROUP, 50, 88, 113, 8
   CONTROL "Centro de coste", -1, "Static", WS_GROUP, 50, 75, 51, 8
@@ -21055,5 +21046,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Asociación", 4001, "Button", BS_GROUPBOX, 3, 3, 388, 59
   CONTROL "Asociado", -1, "Static", WS_GROUP, 11, 33, 60, 8
   CONTROL "Tercero", -1, "Static", WS_GROUP, 11, 47, 47, 8
+}
+
+FACTURAS_CLIENTES_ANTICIPOS DIALOG DISCARDABLE 64, -21, 670, 375
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 290, "TXBrowse", 0x00200000, 44, 50, 620, 321
+  CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Anticipos de factura", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "A&gregar", 270, "Button", WS_TABSTOP, 44, 34, 50, 14
+  CONTROL "Ag. de c&liente", 400, "Button", WS_TABSTOP, 99, 34, 50, 14
+  CONTROL "&Quitar", 280, "Button", WS_TABSTOP, 154, 34, 50, 14
 }
 
