seleccion de serie en remesas al importar

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8516,7 +8516,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 6, 6, 369, 187
 }
 
-IMPREMCLI DIALOG DISCARDABLE 43, -347, 271, 279
+IMPREMCLI DIALOG DISCARDABLE 43, -347, 404, 279
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Importar de recibos a clientes"
 FONT 8, "MS Sans Serif"
@@ -8539,14 +8539,42 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 121, 175, 138, 12
   CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 49, 187, 70, 12
   CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 121, 187, 138, 12
-  CONTROL "No incluir recibos negativos o con importe cero", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 222, 162, 10
-  CONTROL "No incluir recibos sin cuenta bancaria", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 233, 131, 10
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 162, 260, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 217, 260, 50, 14
+  CONTROL "No incluir recibos negativos o con importe cero", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 221, 162, 10
+  CONTROL "No incluir recibos sin cuenta bancaria", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 232, 131, 10
+  CONTROL "Todas", 1170, "TWebBtn", 0x00000000, 278, 17, 50, 11
+  CONTROL "Ninguna", 1180, "TWebBtn", 0x00000000, 338, 17, 50, 11
+  CONTROL "Serie A", 1190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 30, 40, 12
+  CONTROL "Serie B", 1200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 42, 40, 12
+  CONTROL "Serie C", 1210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 54, 39, 12
+  CONTROL "Serie D", 1220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 66, 39, 12
+  CONTROL "Serie E", 1230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 78, 37, 12
+  CONTROL "Serie F", 1240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 90, 39, 12
+  CONTROL "Serie G", 1250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 103, 40, 12
+  CONTROL "Serie H", 1260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 114, 38, 12
+  CONTROL "Serie I", 1270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 126, 34, 12
+  CONTROL "Serie J", 1280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 138, 38, 12
+  CONTROL "Serie K", 1290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 150, 38, 12
+  CONTROL "Serie L", 1300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 162, 39, 12
+  CONTROL "Serie M", 1310, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 174, 40, 12
+  CONTROL "Serie N", 1320, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 30, 40, 12
+  CONTROL "Serie O", 1330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 42, 40, 12
+  CONTROL "Serie P", 1340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 54, 40, 12
+  CONTROL "Serie Q", 1350, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 66, 39, 12
+  CONTROL "Serie R", 1360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 78, 39, 12
+  CONTROL "Serie S", 1370, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 90, 37, 12
+  CONTROL "Serie T", 1380, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 102, 39, 12
+  CONTROL "Serie U", 1390, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 114, 40, 12
+  CONTROL "Serie V", 1400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 126, 38, 12
+  CONTROL "Serie W", 1410, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 138, 37, 12
+  CONTROL "Serie X", 1420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 150, 38, 12
+  CONTROL "Serie Y", 1430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 162, 39, 12
+  CONTROL "Serie Z", 1440, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 338, 174, 40, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 295, 260, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 350, 260, 50, 14
   CONTROL "Fecha expedición", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 3, 264, 38
   CONTROL "Desde", -1, "Static", WS_GROUP, 7, 17, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 7, 30, 37, 8
-  CONTROL "", 140, "msctls_progress32", WS_BORDER, 3, 250, 264, 5
+  CONTROL "", 140, "msctls_progress32", WS_BORDER, 3, 250, 395, 5
   CONTROL "Fecha vencimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 44, 264, 38
   CONTROL "Desde", -1, "Static", WS_GROUP, 6, 58, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 71, 37, 8
@@ -8560,6 +8588,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Desde", -1, "Static", WS_GROUP, 6, 97, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 110, 37, 8
   CONTROL "Opciones", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 206, 264, 41
+  CONTROL "Series incluidas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 267, 3, 132, 243
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
