error en informes antiguos

--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -19573,3 +19573,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 169, 279, 50, 14
   CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|WS_BORDER|WS_TABSTOP, 3, 4, 216, 270
 }
+
+CALENDAR DIALOG DISCARDABLE 107, 59, 110, 70
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
+CAPTION "Calendario"
+FONT 12, "MS Sans Serif"
+{
+  CONTROL "", 100, "SysMonthCal32", MCS_NOTODAYCIRCLE|MCS_NOTODAY, 0, 0, 110, 70
+}
