boton importar inventario

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17542,6 +17542,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 318, 130, 50, 14
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 130, 50, 14
   CONTROL "Mostrar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 130, 50, 14
+  CONTROL "Importar", 527, "Button", WS_TABSTOP, 612, 130, 50, 14
   CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 44, 147, 618, 139
   CONTROL "", 219, "Edit", WS_BORDER|WS_TABSTOP, 51, 300, 90, 11
   CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 300, 44, 11
