--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -277,3 +277,12 @@ BOX_WHITE_32 BITMAP "..\\bmp\\box_white_32.bmp"
 BOX_WHITE_16 BITMAP "..\\bmp\\box_white_16.bmp"
 
 BUSINESSMEN_48 BITMAP "..\\bmp\\businessmen_48.bmp"
+
+GC_BRIEFCASE2_USER_64 BITMAP "..\\bmp\\gc_briefcase2_user_64.bmp"
+GC_USER_64 BITMAP "..\\bmp\\gc_user_64.bmp"
+GC_CLIPBOARD_EMPTY_USER_64 BITMAP "..\\bmp\\gc_clipboard_empty_user_64.bmp"
+GC_DOCUMENT_EMPTY_USER_64 BITMAP "..\\bmp\\gc_document_empty_user_64.bmp"
+GC_DOCUMENT_TEXT_USER_64 BITMAP "..\\bmp\\gc_document_text_user_64.bmp"
+GC_SPEECH_BALLOON_ANSWER_64 BITMAP "..\\bmp\\gc_speech_balloon_answer_64.bmp"
+GC_DOOR_OPEN_64 BITMAP "..\\bmp\\gc_door_open_64.bmp"
+GC_SATELLITE_DISH_64 BITMAP "..\\bmp\\gc_satellite_dish_64.bmp"
