--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -286,3 +286,22 @@ GC_DOCUMENT_TEXT_USER_64 BITMAP "..\\bmp\\gc_document_text_user_64.bmp"
 GC_SPEECH_BALLOON_ANSWER_64 BITMAP "..\\bmp\\gc_speech_balloon_answer_64.bmp"
 GC_DOOR_OPEN_64 BITMAP "..\\bmp\\gc_door_open_64.bmp"
 GC_SATELLITE_DISH_64 BITMAP "..\\bmp\\gc_satellite_dish_64.bmp"
+GC_LOCK_64 BITMAP "..\\bmp\\gc_lock_64.bmp"
+GC_PENCIL_64 BITMAP "..\\bmp\\gc_pencil_64.bmp"
+GC_DELETE_64 BITMAP "..\\bmp\\gc_delete_64.bmp"
+GC_ERROR_64 BITMAP "..\\bmp\\gc_error_64.bmp"
+GC_PLUS_64 BITMAP "..\\bmp\\gc_plus_64.bmp"
+GC_ADD_64 BITMAP "..\\bmp\\gc_add_64.bmp"
+GC_OK_64 BITMAP "..\\bmp\\gc_ok_64.bmp"
+GC_PRINTER_64 BITMAP "..\\bmp\\gc_printer_64.bmp"
+GC_BINOCULAR_64 BITMAP "..\\bmp\\gc_binocular_64.bmp"
+GC_NAVIGATE_UP_64 BITMAP "..\\bmp\\gc_navigate_up_64.bmp"
+GC_NAVIGATE_UP2_64 BITMAP "..\\bmp\\gc_navigate_up2_64.bmp"
+GC_NAVIGATE_DOWN_64 BITMAP "..\\bmp\\gc_navigate_down_64.bmp"
+GC_NAVIGATE_DOWN2_64 BITMAP "..\\bmp\\gc_navigate_down2_64.bmp"
+GC_NAVIGATE_LEFT_64 BITMAP "..\\bmp\\gc_navigate_left_64.bmp"
+GC_NAVIGATE_RIGHT_64 BITMAP "..\\bmp\\gc_navigate_right_64.bmp"
+GC_NAVIGATE_LEFT_56 BITMAP "..\\bmp\\gc_navigate_left_56.bmp"
+GC_NAVIGATE_RIGHT_56 BITMAP "..\\bmp\\gc_navigate_right_56.bmp"
+GC_EDIT_48 BITMAP "..\\bmp\\gc_edit_48.bmp"
+GC_MAGNIFYING_GLASS_48 BITMAP "..\\bmp\\gc_magnifying_glass_48.bmp"
