--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -35,3 +35,5 @@ GC_NAVIGATE_LEFT_56 BITMAP "..\\bmp\\gc_navigate_left_56.bmp"
 GC_NAVIGATE_RIGHT_56 BITMAP "..\\bmp\\gc_navigate_right_56.bmp"
 GC_EDIT_48 BITMAP "..\\bmp\\gc_edit_48.bmp"
 GC_MAGNIFYING_GLASS_48 BITMAP "..\\bmp\\gc_magnifying_glass_48.bmp"
+GC_DOCUMENT_EMPTY_32 BITMAP "..\\bmp\\gc_document_empty_32.bmp"
+GC_DOCUMENT_EMPTY_16 BITMAP "..\\bmp\\gc_document_empty_16.bmp"
