--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -39,4 +39,9 @@ GC_DOCUMENT_EMPTY_32 BITMAP "..\\bmp\\gc_document_empty_32.bmp"
 GC_DOCUMENT_EMPTY_16 BITMAP "..\\bmp\\gc_document_empty_16.bmp"
 GC_USERS3_16 BITMAP "..\\bmp\\gc_users3_16.bmp"
 GC_USERS3_32 BITMAP "..\\bmp\\gc_users3_32.bmp"
+GC_SIGNPOST2_16 BITMAP "..\\bmp\\gc_signpost2_16.bmp"
+GC_SIGNPOST2_32 BITMAP "..\\bmp\\gc_signpost2_32.bmp"
+GC_USER_16 BITMAP "..\\bmp\\gc_user_16.bmp"
+GC_USER_32 BITMAP "..\\bmp\\gc_user_32.bmp"
+
 
