--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -413,8 +413,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 129, 50, 14
   CONTROL "Ocultar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 129, 50, 14
   CONTROL "Importar tarifa", 527, "Button", WS_TABSTOP, 483, 129, 50, 14
-  CONTROL "Lector  [F8]", 528, "Button", WS_TABSTOP, 562, 129, 50, 14
-  CONTROL "Lector series", 529, "Button", WS_TABSTOP, 616, 129, 50, 14
+  CONTROL "Lector  [F8]", 528, "Button", WS_TABSTOP, 616, 129, 50, 14
   CONTROL "", 240, "TXBrowse", WS_TABSTOP|0x00300000, 44, 145, 622, 139
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 288, 154, 61
   CONTROL "", 173, "Edit", ES_RIGHT|WS_BORDER, 391, 54, 54, 11
@@ -15267,7 +15266,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 130, 50, 14
   CONTROL "Mostrar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 130, 50, 14
   CONTROL "Importar tarifa", 527, "Button", WS_TABSTOP, 484, 130, 50, 14
-  CONTROL "Lector series", 528, "Button", WS_TABSTOP, 612, 130, 50, 14
+  CONTROL "Lector [F8]", 528, "Button", WS_TABSTOP, 612, 130, 50, 14
   CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 44, 146, 618, 138
   CONTROL "", 219, "Edit", WS_BORDER|WS_TABSTOP, 50, 298, 76, 11
   CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 128, 298, 50, 11
@@ -21043,16 +21042,18 @@ FONT 8, "MS Sans Serif"
   CONTROL "Inventario", -1, "Static", WS_GROUP, 5, 3, 37, 8
 }
 
-MASSIVE_APPEND_LINES DIALOG DISCARDABLE 37, 77, 376, 55
+MASSIVE_APPEND_LINES DIALOG DISCARDABLE 37, 77, 376, 284
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION
-CAPTION "Inserte código artículo"
+CAPTION "Inserte artículo o relación"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 4, 3, 34, 30
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 97, 21, 275, 12
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 97, 21, 274, 12
   CONTROL "Artículo", -1, "Static", WS_GROUP, 44, 25, 30, 8
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 267, 37, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 322, 37, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 267, 261, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 322, 261, 50, 14
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|ES_WANTRETURN|WS_BORDER|WS_TABSTOP, 97, 37, 274, 219
+  CONTROL "Relación", -1, "Static", WS_GROUP, 44, 38, 30, 8
 }
 
 FACTURAS_CLIENTES_RECIBOS DIALOG DISCARDABLE 64, -21, 670, 375
