iconos grupo ventas G-col

--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -49,3 +49,29 @@ GC_ID_CARD_16 BITMAP "..\\bmp\\gc_id_card_16.bmp"
 GC_ID_CARD_32 BITMAP "..\\bmp\\gc_id_card_32.bmp"
 GC_FOLDER_GEAR_16 BITMAP "..\\bmp\\gc_folder_gear_16.bmp"
 GC_FOLDER_GEAR_32 BITMAP "..\\bmp\\gc_folder_gear_32.bmp"
+GC_DOCUMENT_TEXT_GEAR_16 BITMAP "..\\bmp\\gc_document_text_gear_16.bmp"
+GC_DOCUMENT_TEXT_GEAR_32 BITMAP "..\\bmp\\gc_document_text_gear_32.bmp"
+GC_POWER_DRILL_SAT_USER_16 BITMAP "..\\bmp\\gc_power_drill_sat_user_16.bmp"
+GC_POWER_DRILL_SAT_USER_32 BITMAP "..\\bmp\\gc_power_drill_sat_user_32.bmp"
+GC_NOTEBOOK_USER_16 BITMAP "..\\bmp\\gc_notebook_user_16.bmp"
+GC_NOTEBOOK_USER_32 BITMAP "..\\bmp\\gc_notebook_user_32.bmp"
+GC_CLIPBOARD_EMPTY_USER_16 BITMAP "..\\bmp\\gc_clipboard_empty_user_16.bmp"
+GC_CLIPBOARD_EMPTY_USER_32 BITMAP "..\\bmp\\gc_clipboard_empty_user_32.bmp"
+GC_DOCUMENT_TEXT_USER_16 BITMAP "..\\bmp\\gc_document_text_user_16.bmp"
+GC_DOCUMENT_TEXT_USER_32 BITMAP "..\\bmp\\gc_document_text_user_32.bmp"
+GC_DOCUMENT_TEXT_MONEY2_16 BITMAP "..\\bmp\\gc_document_text_money2_16.bmp"
+GC_DOCUMENT_TEXT_MONEY2_32 BITMAP "..\\bmp\\gc_document_text_money2_32.bmp"
+GC_DOCUMENT_TEXT_DELETE_16 BITMAP "..\\bmp\\gc_document_text_delete_16.bmp"
+GC_DOCUMENT_TEXT_DELETE_32 BITMAP "..\\bmp\\gc_document_text_delete_32.bmp"
+GC_SMALL_TRUCK_USER_16 BITMAP "..\\bmp\\gc_small_truck_user_16.bmp"
+GC_SMALL_TRUCK_USER_32 BITMAP "..\\bmp\\gc_small_truck_user_32.bmp"
+GC_BRIEFCASE2_USER_16 BITMAP "..\\bmp\\gc_briefcase2_user_16.bmp"
+GC_BRIEFCASE2_USER_32 BITMAP "..\\bmp\\gc_briefcase2_user_32.bmp"
+GC_BRIEFCASE2_DOCUMENT_16 BITMAP "..\\bmp\\gc_briefcase2_document_16.bmp"
+GC_BRIEFCASE2_DOCUMENT_32 BITMAP "..\\bmp\\gc_briefcase2_document_32.bmp"
+GC_BRIEFCASE2_AGENT_16 BITMAP "..\\bmp\\gc_briefcase2_agent_16.bmp"
+GC_BRIEFCASE2_AGENT_32 BITMAP "..\\bmp\\gc_briefcase2_agent_32.bmp"
+GC_EARTH_MONEY_16 BITMAP "..\\bmp\\gc_earth_money_16.bmp"
+GC_EARTH_MONEY_32 BITMAP "..\\bmp\\gc_earth_money_32.bmp"
+GC_CLIPBOARD_EMPTY_EARTH_16 BITMAP "..\\bmp\\gc_clipboard_empty_earth_16.bmp"
+GC_CLIPBOARD_EMPTY_EARTH_32 BITMAP "..\\bmp\\gc_clipboard_empty_earth_32.bmp"
