--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -75,3 +75,9 @@ GC_EARTH_MONEY_16 BITMAP "..\\bmp\\gc_earth_money_16.bmp"
 GC_EARTH_MONEY_32 BITMAP "..\\bmp\\gc_earth_money_32.bmp"
 GC_CLIPBOARD_EMPTY_EARTH_16 BITMAP "..\\bmp\\gc_clipboard_empty_earth_16.bmp"
 GC_CLIPBOARD_EMPTY_EARTH_32 BITMAP "..\\bmp\\gc_clipboard_empty_earth_32.bmp"
+GC_CASH_REGISTER_USER_16 BITMAP "..\\bmp\\gc_cash_register_user_16.bmp"
+GC_CASH_REGISTER_USER_32 BITMAP "..\\bmp\\gc_cash_register_user_32.bmp"
+GC_CASH_REGISTER_TOUCH_16 BITMAP "..\\bmp\\gc_cash_register_touch_16.bmp"
+GC_CASH_REGISTER_TOUCH_32 BITMAP "..\\bmp\\gc_cash_register_touch_32.bmp"
+GC_CASH_REGISTER_REFRESH_16 BITMAP "..\\bmp\\gc_cash_register_refresh_16.bmp"
+GC_CASH_REGISTER_REFRESH_32 BITMAP "..\\bmp\\gc_cash_register_refresh_32.bmp"
