--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -81,3 +81,7 @@ GC_CASH_REGISTER_TOUCH_16 BITMAP "..\\bmp\\gc_cash_register_touch_16.bmp"
 GC_CASH_REGISTER_TOUCH_32 BITMAP "..\\bmp\\gc_cash_register_touch_32.bmp"
 GC_CASH_REGISTER_REFRESH_16 BITMAP "..\\bmp\\gc_cash_register_refresh_16.bmp"
 GC_CASH_REGISTER_REFRESH_32 BITMAP "..\\bmp\\gc_cash_register_refresh_32.bmp"
+GC_CUP_16 BITMAP "..\\bmp\\gc_cup_16.bmp"
+GC_CUP_32 BITMAP "..\\bmp\\gc_cup_32.bmp"
+GC_MASKS_16 BITMAP "..\\bmp\\gc_masks_16.bmp"
+GC_MASKS_32 BITMAP "..\\bmp\\gc_masks_32.bmp"
