--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -85,3 +85,15 @@ GC_CUP_16 BITMAP "..\\bmp\\gc_cup_16.bmp"
 GC_CUP_32 BITMAP "..\\bmp\\gc_cup_32.bmp"
 GC_MASKS_16 BITMAP "..\\bmp\\gc_masks_16.bmp"
 GC_MASKS_32 BITMAP "..\\bmp\\gc_masks_32.bmp"
+GC_SORT_AZ_DESCENDING_16 BITMAP "..\\bmp\\gc_sort_az_descending_16.bmp"
+GC_SORT_AZ_DESCENDING_32 BITMAP "..\\bmp\\gc_sort_az_descending_32.bmp"
+GC_CLIPBOARD_EMPTY_16 BITMAP "..\\bmp\\gc_clipboard_empty_16.bmp"
+GC_CLIPBOARD_EMPTY_32 BITMAP "..\\bmp\\gc_clipboard_empty_32.bmp"
+GC_WINDOW_PENCIL_16 BITMAP "..\\bmp\\gc_window_pencil_16.bmp"
+GC_WINDOW_PENCIL_32 BITMAP "..\\bmp\\gc_window_pencil_32.bmp"
+GC_BALANCE_16 BITMAP "..\\bmp\\gc_balance_16.bmp"
+GC_BALANCE_32 BITMAP "..\\bmp\\gc_balance_32.bmp"
+GC_ODOMETER_SCREW_16 BITMAP "..\\bmp\\gc_odometer_screw_16.bmp"
+GC_ODOMETER_SCREW_32 BITMAP "..\\bmp\\gc_odometer_screw_32.bmp"
+GC_MODEM_SCREW_16 BITMAP "..\\bmp\\gc_modem_screw_16.bmp"
+GC_MODEM_SCREW_32 BITMAP "..\\bmp\\gc_modem_screw_32.bmp"
