--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -97,3 +97,13 @@ GC_ODOMETER_SCREW_16 BITMAP "..\\bmp\\gc_odometer_screw_16.bmp"
 GC_ODOMETER_SCREW_32 BITMAP "..\\bmp\\gc_odometer_screw_32.bmp"
 GC_MODEM_SCREW_16 BITMAP "..\\bmp\\gc_modem_screw_16.bmp"
 GC_MODEM_SCREW_32 BITMAP "..\\bmp\\gc_modem_screw_32.bmp"
+GC_BUSINESSPEOPLE_16 BITMAP "..\\bmp\\gc_businesspeople_16.bmp"
+GC_BUSINESSPEOPLE_32 BITMAP "..\\bmp\\gc_businesspeople_32.bmp"
+GC_DOCUMENT_TEXT_SCREW_16 BITMAP "..\\bmp\\gc_document_text_screw_16.bmp"
+GC_DOCUMENT_TEXT_SCREW_32 BITMAP "..\\bmp\\gc_document_text_screw_32.bmp"
+GC_PRINTER2_CHECK_16 BITMAP "..\\bmp\\gc_printer2_check_16.bmp"
+GC_PRINTER2_CHECK_32 BITMAP "..\\bmp\\gc_printer2_check_32.bmp"
+GC_FOLDERS2_16 BITMAP "..\\bmp\\gc_folders2_16.bmp"
+GC_FOLDERS2_32 BITMAP "..\\bmp\\gc_folders2_32.bmp"
+GC_FIND_REPLACE_16 BITMAP "..\\bmp\\gc_find_replace_16.bmp"
+GC_FIND_REPLACE_32 BITMAP "..\\bmp\\gc_find_replace_32.bmp"
