--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -107,3 +107,15 @@ GC_FOLDERS2_16 BITMAP "..\\bmp\\gc_folders2_16.bmp"
 GC_FOLDERS2_32 BITMAP "..\\bmp\\gc_folders2_32.bmp"
 GC_FIND_REPLACE_16 BITMAP "..\\bmp\\gc_find_replace_16.bmp"
 GC_FIND_REPLACE_32 BITMAP "..\\bmp\\gc_find_replace_32.bmp"
+GC_FORM_PLUS2_16 BITMAP "..\\bmp\\gc_form_plus2_16.bmp"
+GC_FORM_PLUS2_32 BITMAP "..\\bmp\\gc_form_plus2_32.bmp"
+GC_NOTEBOOK2_16 BITMAP "..\\bmp\\gc_notebook2_16.bmp"
+GC_NOTEBOOK2_32 BITMAP "..\\bmp\\gc_notebook2_32.bmp"
+GC_TELEPHONE_16 BITMAP "..\\bmp\\gc_telephone_16.bmp"
+GC_TELEPHONE_32 BITMAP "..\\bmp\\gc_telephone_32.bmp"
+GC_CODE_LINE_16 BITMAP "..\\bmp\\gc_code_line_16.bmp"
+GC_CODE_LINE_32 BITMAP "..\\bmp\\gc_code_line_32.bmp"
+GC_RECYCLE_16 BITMAP "..\\bmp\\gc_recycle_16.bmp"
+GC_RECYCLE_32 BITMAP "..\\bmp\\gc_recycle_32.bmp"
+GC_SHIELD_16 BITMAP "..\\bmp\\gc_shield_16.bmp"
+GC_SHIELD_32 BITMAP "..\\bmp\\gc_shield_32.bmp"
