--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -119,3 +119,9 @@ GC_RECYCLE_16 BITMAP "..\\bmp\\gc_recycle_16.bmp"
 GC_RECYCLE_32 BITMAP "..\\bmp\\gc_recycle_32.bmp"
 GC_SHIELD_16 BITMAP "..\\bmp\\gc_shield_16.bmp"
 GC_SHIELD_32 BITMAP "..\\bmp\\gc_shield_32.bmp"
+GC_SATELLITE_DISH2_16 BITMAP "..\\bmp\\gc_satellite_dish2_16.bmp"
+GC_SATELLITE_DISH2_32 BITMAP "..\\bmp\\gc_satellite_dish2_32.bmp"
+GC_PDA_16 BITMAP "..\\bmp\\gc_pda_16.bmp"
+GC_PDA_32 BITMAP "..\\bmp\\gc_pda_32.bmp"
+GC_INBOX_OUT_16 BITMAP "..\\bmp\\gc_inbox_out_16.bmp"
+GC_INBOX_OUT_32 BITMAP "..\\bmp\\gc_inbox_out_32.bmp"
