--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -125,3 +125,25 @@ GC_PDA_16 BITMAP "..\\bmp\\gc_pda_16.bmp"
 GC_PDA_32 BITMAP "..\\bmp\\gc_pda_32.bmp"
 GC_INBOX_OUT_16 BITMAP "..\\bmp\\gc_inbox_out_16.bmp"
 GC_INBOX_OUT_32 BITMAP "..\\bmp\\gc_inbox_out_32.bmp"
+GC_INBOX_INTO_16 BITMAP "..\\bmp\\gc_inbox_into_16.bmp"
+GC_INBOX_INTO_32 BITMAP "..\\bmp\\gc_inbox_into_32.bmp"
+GC_PDA_WRITE_16 BITMAP "..\\bmp\\gc_pda_write_16.bmp"
+GC_PDA_WRITE_32 BITMAP "..\\bmp\\gc_pda_write_32.bmp"
+GC_TABLE_SELECTION_COLUMN_16 BITMAP "..\\bmp\\gc_table_selection_column_16.bmp"
+GC_TABLE_SELECTION_COLUMN_32 BITMAP "..\\bmp\\gc_table_selection_column_32.bmp"
+GC_MAGIC_WAND_16 BITMAP "..\\bmp\\gc_magic_wand_16.bmp"
+GC_MAGIC_WAND_32 BITMAP "..\\bmp\\gc_magic_wand_32.bmp"
+GC_CALCULATOR_16 BITMAP "..\\bmp\\gc_calculator_16.bmp"
+GC_CALCULATOR_32 BITMAP "..\\bmp\\gc_calculator_32.bmp"
+GC_CALENDAR_16 BITMAP "..\\bmp\\gc_calendar_16.bmp"
+GC_CALENDAR_32 BITMAP "..\\bmp\\gc_calendar_32.bmp"
+GC_CURRENCY_EURO_16 BITMAP "..\\bmp\\gc_currency_euro_16.bmp"
+GC_CURRENCY_EURO_32 BITMAP "..\\bmp\\gc_currency_euro_32.bmp"
+GC_LIFEBELT_16 BITMAP "..\\bmp\\gc_lifebelt_16.bmp"
+GC_LIFEBELT_32 BITMAP "..\\bmp\\gc_lifebelt_32.bmp"
+GC_EARTH_16 BITMAP "..\\bmp\\gc_earth_16.bmp"
+GC_EARTH_32 BITMAP "..\\bmp\\gc_earth_32.bmp"
+GC_QUESTION_16 BITMAP "..\\bmp\\gc_question_16.bmp"
+GC_QUESTION_32 BITMAP "..\\bmp\\gc_question_32.bmp"
+GC_USER_HEADSET_16 BITMAP "..\\bmp\\gc_user_headset_16.bmp"
+GC_USER_HEADSET_32 BITMAP "..\\bmp\\gc_user_headset_32.bmp"
