--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -147,3 +147,13 @@ GC_QUESTION_16 BITMAP "..\\bmp\\gc_question_16.bmp"
 GC_QUESTION_32 BITMAP "..\\bmp\\gc_question_32.bmp"
 GC_USER_HEADSET_16 BITMAP "..\\bmp\\gc_user_headset_16.bmp"
 GC_USER_HEADSET_32 BITMAP "..\\bmp\\gc_user_headset_32.bmp"
+GC_PRINTER2_16 BITMAP "..\\bmp\\gc_printer2_16.bmp"
+GC_PRINTER2_32 BITMAP "..\\bmp\\gc_printer2_32.bmp"
+GC_OBJECT_CUBE_PRINT_16 BITMAP "..\\bmp\\gc_object_cube_print_16.bmp"
+GC_OBJECT_CUBE_PRINT_32 BITMAP "..\\bmp\\gc_object_cube_print_32.bmp"
+GC_USER_PRINT_16 BITMAP "..\\bmp\\gc_user_print_16.bmp"
+GC_USER_PRINT_32 BITMAP "..\\bmp\\gc_user_print_32.bmp"
+GC_BUSINESSMAN_PRINT_16 BITMAP "..\\bmp\\gc_businessman_print_16.bmp"
+GC_BUSINESSMAN_PRINT_32 BITMAP "..\\bmp\\gc_businessman_print_32.bmp"
+GC_WORKER2_PRINT_16 BITMAP "..\\bmp\\gc_worker2_print_16.bmp"
+GC_WORKER2_PRINT_32 BITMAP "..\\bmp\\gc_worker2_print_32.bmp"
