--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -157,3 +157,27 @@ GC_BUSINESSMAN_PRINT_16 BITMAP "..\\bmp\\gc_businessman_print_16.bmp"
 GC_BUSINESSMAN_PRINT_32 BITMAP "..\\bmp\\gc_businessman_print_32.bmp"
 GC_WORKER2_PRINT_16 BITMAP "..\\bmp\\gc_worker2_print_16.bmp"
 GC_WORKER2_PRINT_32 BITMAP "..\\bmp\\gc_worker2_print_32.bmp"
+GC_BRIEFCASE_16 BITMAP "..\\bmp\\gc_briefcase_16.bmp"
+GC_BRIEFCASE_32 BITMAP "..\\bmp\\gc_briefcase_32.bmp"
+GC_CLOCK_16 BITMAP "..\\bmp\\gc_clock_16.bmp"
+GC_CLOCK_32 BITMAP "..\\bmp\\gc_clock_32.bmp"
+GC_CLOCK_PLAY_16 BITMAP "..\\bmp\\gc_clock_play_16.bmp"
+GC_CLOCK_PLAY_32 BITMAP "..\\bmp\\gc_clock_play_32.bmp"
+GC_CLOCK_REFRESH_16 BITMAP "..\\bmp\\gc_clock_refresh_16.bmp"
+GC_CLOCK_REFRESH_32 BITMAP "..\\bmp\\gc_clock_refresh_32.bmp"
+GC_CLOCK_STOP_16 BITMAP "..\\bmp\\gc_clock_stop_16.bmp"
+GC_CLOCK_STOP_32 BITMAP "..\\bmp\\gc_clock_stop_32.bmp"
+GC_FACTORY_16 BITMAP "..\\bmp\\gc_factory_16.bmp"
+GC_FACTORY_32 BITMAP "..\\bmp\\gc_factory_32.bmp"
+GC_WRENCH_16 BITMAP "..\\bmp\\gc_wrench_16.bmp"
+GC_WRENCH_32 BITMAP "..\\bmp\\gc_wrench_32.bmp"
+GC_CUBES_16 BITMAP "..\\bmp\\gc_cubes_16.bmp"
+GC_CUBES_32 BITMAP "..\\bmp\\gc_cubes_32.bmp"
+GC_FOLDER_CUBES_16 BITMAP "..\\bmp\\gc_folder_cubes_16.bmp"
+GC_FOLDER_CUBES_32 BITMAP "..\\bmp\\gc_folder_cubes_32.bmp"
+GC_OBJECT_CUBE_16 BITMAP "..\\bmp\\gc_object_cube_16.bmp"
+GC_OBJECT_CUBE_32 BITMAP "..\\bmp\\gc_object_cube_32.bmp"
+GC_BOLT_16 BITMAP "..\\bmp\\gc_bolt_16.bmp"
+GC_BOLT_32 BITMAP "..\\bmp\\gc_bolt_32.bmp"
+GC_MESSAGE_16 BITMAP "..\\bmp\\gc_message_16.bmp"
+GC_MESSAGE_32 BITMAP "..\\bmp\\gc_message_32.bmp"
