--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -181,3 +181,15 @@ GC_BOLT_16 BITMAP "..\\bmp\\gc_bolt_16.bmp"
 GC_BOLT_32 BITMAP "..\\bmp\\gc_bolt_32.bmp"
 GC_MESSAGE_16 BITMAP "..\\bmp\\gc_message_16.bmp"
 GC_MESSAGE_32 BITMAP "..\\bmp\\gc_message_32.bmp"
+GC_COATHANGER_16 BITMAP "..\\bmp\\gc_coathanger_16.bmp"
+GC_COATHANGER_32 BITMAP "..\\bmp\\gc_coathanger_32.bmp"
+GC_OBJECTS_TRANSFORM_16 BITMAP "..\\bmp\\gc_objects_transform_16.bmp"
+GC_OBJECTS_TRANSFORM_32 BITMAP "..\\bmp\\gc_objects_transform_32.bmp"
+GC_TAPE_MEASURE2_16 BITMAP "..\\bmp\\gc_tape_measure2_16.bmp"
+GC_TAPE_MEASURE2_32 BITMAP "..\\bmp\\gc_tape_measure2_32.bmp"
+GC_OBJECTS_16 BITMAP "..\\bmp\\gc_objects_16.bmp"
+GC_OBJECTS_32 BITMAP "..\\bmp\\gc_objects_32.bmp"
+GC_PHOTOGRAPHIC_FILTERS_16 BITMAP "..\\bmp\\gc_photographic_filters_16.bmp"
+GC_PHOTOGRAPHIC_FILTERS_32 BITMAP "..\\bmp\\gc_photographic_filters_32.bmp"
+GC_CLOUD_SUN_16 BITMAP "..\\bmp\\gc_cloud_sun_16.bmp"
+GC_CLOUD_SUN_32 BITMAP "..\\bmp\\gc_cloud_sun_32.bmp"
