--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -193,3 +193,27 @@ GC_PHOTOGRAPHIC_FILTERS_16 BITMAP "..\\bmp\\gc_photographic_filters_16.bmp"
 GC_PHOTOGRAPHIC_FILTERS_32 BITMAP "..\\bmp\\gc_photographic_filters_32.bmp"
 GC_CLOUD_SUN_16 BITMAP "..\\bmp\\gc_cloud_sun_16.bmp"
 GC_CLOUD_SUN_32 BITMAP "..\\bmp\\gc_cloud_sun_32.bmp"
+GC_SYMBOL_PERCENT_16 BITMAP "..\\bmp\\gc_symbol_percent_16.bmp"
+GC_SYMBOL_PERCENT_32 BITMAP "..\\bmp\\gc_symbol_percent_32.bmp"
+GC_BOX_CLOSED_16 BITMAP "..\\bmp\\gc_box_closed_16.bmp"
+GC_BOX_CLOSED_32 BITMAP "..\\bmp\\gc_box_closed_32.bmp"
+GC_STAR2_16 BITMAP "..\\bmp\\gc_star2_16.bmp"
+GC_STAR2_32 BITMAP "..\\bmp\\gc_star2_32.bmp"
+GC_STAR2_BLUE_16 BITMAP "..\\bmp\\gc_star2_blue_16.bmp"
+GC_STAR2_BLUE_32 BITMAP "..\\bmp\\gc_star2_blue_32.bmp"
+GC_PACKAGE_BINOCULAR_16 BITMAP "..\\bmp\\gc_package_binocular_16.bmp"
+GC_PACKAGE_BINOCULAR_32 BITMAP "..\\bmp\\gc_package_binocular_32.bmp"
+GC_PACKAGE_LUPA_16 BITMAP "..\\bmp\\gc_package_lupa_16.bmp"
+GC_PACKAGE_LUPA_32 BITMAP "..\\bmp\\gc_package_lupa_32.bmp"
+GC_MONEYBAG_16 BITMAP "..\\bmp\\gc_moneybag_16.bmp"
+GC_MONEYBAG_32 BITMAP "..\\bmp\\gc_moneybag_32.bmp"
+GC_MONEYBAG_EURO_16 BITMAP "..\\bmp\\gc_moneybag_euro_16.bmp"
+GC_MONEYBAG_EURO_32 BITMAP "..\\bmp\\gc_moneybag_euro_32.bmp"
+GC_CENTRAL_BANK_EURO_16 BITMAP "..\\bmp\\gc_central_bank_euro_16.bmp"
+GC_CENTRAL_BANK_EURO_32 BITMAP "..\\bmp\\gc_central_bank_euro_32.bmp"
+GC_CENTRAL_BANK_EURO_TEXT_16 BITMAP "..\\bmp\\gc_central_bank_euro_text_16.bmp"
+GC_CENTRAL_BANK_EURO_TEXT_32 BITMAP "..\\bmp\\gc_central_bank_euro_text_32.bmp"
+GC_CREDIT_CARDS_16 BITMAP "..\\bmp\\gc_credit_cards_16.bmp"
+GC_CREDIT_CARDS_32 BITMAP "..\\bmp\\gc_credit_cards_32.bmp"
+GC_PORTFOLIO_FOLDER_16 BITMAP "..\\bmp\\gc_portfolio_folder_16.bmp"
+GC_PORTFOLIO_FOLDER_32 BITMAP "..\\bmp\\gc_portfolio_folder_32.bmp"
