--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -217,3 +217,9 @@ GC_CREDIT_CARDS_16 BITMAP "..\\bmp\\gc_credit_cards_16.bmp"
 GC_CREDIT_CARDS_32 BITMAP "..\\bmp\\gc_credit_cards_32.bmp"
 GC_PORTFOLIO_FOLDER_16 BITMAP "..\\bmp\\gc_portfolio_folder_16.bmp"
 GC_PORTFOLIO_FOLDER_32 BITMAP "..\\bmp\\gc_portfolio_folder_32.bmp"
+GC_FOLDER2_16 BITMAP "..\\bmp\\gc_folder2_16.bmp"
+GC_FOLDER2_32 BITMAP "..\\bmp\\gc_folder2_32.bmp"
+GC_CASH_REGISTER_16 BITMAP "..\\bmp\\gc_cash_register_16.bmp"
+GC_CASH_REGISTER_32 BITMAP "..\\bmp\\gc_cash_register_32.bmp"
+GC_MAGAZINE_FOLDER_16 BITMAP "..\\bmp\\gc_magazine_folder_16.bmp"
+GC_MAGAZINE_FOLDER_32 BITMAP "..\\bmp\\gc_magazine_folder_32.bmp"
