--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -223,3 +223,51 @@ GC_CASH_REGISTER_16 BITMAP "..\\bmp\\gc_cash_register_16.bmp"
 GC_CASH_REGISTER_32 BITMAP "..\\bmp\\gc_cash_register_32.bmp"
 GC_MAGAZINE_FOLDER_16 BITMAP "..\\bmp\\gc_magazine_folder_16.bmp"
 GC_MAGAZINE_FOLDER_32 BITMAP "..\\bmp\\gc_magazine_folder_32.bmp"
+GC_FOLDER_OPEN_MONEY_16 BITMAP "..\\bmp\\gc_folder_open_money_16.bmp"
+GC_FOLDER_OPEN_MONEY_32 BITMAP "..\\bmp\\gc_folder_open_money_32.bmp"
+GC_POSTAGE_STAMP_16 BITMAP "..\\bmp\\gc_postage_stamp_16.bmp"
+GC_POSTAGE_STAMP_32 BITMAP "..\\bmp\\gc_postage_stamp_32.bmp"
+GC_USER_MESSAGE_16 BITMAP "..\\bmp\\gc_user_message_16.bmp"
+GC_USER_MESSAGE_32 BITMAP "..\\bmp\\gc_user_message_32.bmp"
+GC_WALLET_16 BITMAP "..\\bmp\\gc_wallet_16.bmp"
+GC_WALLET_32 BITMAP "..\\bmp\\gc_wallet_32.bmp"
+GC_SMALL_TRUCK_16 BITMAP "..\\bmp\\gc_small_truck_16.bmp"
+GC_SMALL_TRUCK_32 BITMAP "..\\bmp\\gc_small_truck_32.bmp"
+GC_CAMERA_16 BITMAP "..\\bmp\\gc_camera_16.bmp"
+GC_CAMERA_32 BITMAP "..\\bmp\\gc_camera_32.bmp"
+GC_DOCUMENT_ATTACHMENT_16 BITMAP "..\\bmp\\gc_document_attachment_16.bmp"
+GC_DOCUMENT_ATTACHMENT_32 BITMAP "..\\bmp\\gc_document_attachment_32.bmp"
+GC_BOOKMARKS_16 BITMAP "..\\bmp\\gc_bookmarks_16.bmp"
+GC_BOOKMARKS_32 BITMAP "..\\bmp\\gc_bookmarks_32.bmp"
+GC_FLAG_SPAIN_16 BITMAP "..\\bmp\\gc_flag_spain_16.bmp"
+GC_FLAG_SPAIN_32 BITMAP "..\\bmp\\gc_flag_spain_32.bmp"
+GC_GLOBE_16 BITMAP "..\\bmp\\gc_globe_16.bmp"
+GC_GLOBE_32 BITMAP "..\\bmp\\gc_globe_32.bmp"
+GC_BUSINESSMEN2_16 BITMAP "..\\bmp\\gc_businessmen2_16.bmp"
+GC_BUSINESSMEN2_32 BITMAP "..\\bmp\\gc_businessmen2_32.bmp"
+GC_BUSINESSMAN_16 BITMAP "..\\bmp\\gc_businessman_16.bmp"
+GC_BUSINESSMAN_32 BITMAP "..\\bmp\\gc_businessman_32.bmp"
+GC_CLIPBOARD_EMPTY_BUSINESSMAN_16 BITMAP "..\\bmp\\gc_clipboard_empty_businessman_16.bmp"
+GC_CLIPBOARD_EMPTY_BUSINESSMAN_32 BITMAP "..\\bmp\\gc_clipboard_empty_businessman_32.bmp"
+GC_DOCUMENT_EMPTY_BUSINESSMAN_16 BITMAP "..\\bmp\\gc_document_empty_businessman_16.bmp"
+GC_DOCUMENT_EMPTY_BUSINESSMAN_32 BITMAP "..\\bmp\\gc_document_empty_businessman_32.bmp"
+GC_DOCUMENT_TEXT_BUSINESSMAN_16 BITMAP "..\\bmp\\gc_document_text_businessman_16.bmp"
+GC_DOCUMENT_TEXT_BUSINESSMAN_32 BITMAP "..\\bmp\\gc_document_text_businessman_32.bmp"
+GC_DOCUMENT_TEXT_DELETE2_16 BITMAP "..\\bmp\\gc_document_text_delete2_16.bmp"
+GC_DOCUMENT_TEXT_DELETE2_32 BITMAP "..\\bmp\\gc_document_text_delete2_32.bmp"
+GC_BRIEFCASE2_BUSINESSMAN_16 BITMAP "..\\bmp\\gc_briefcase2_businessman_16.bmp"
+GC_BRIEFCASE2_BUSINESSMAN_32 BITMAP "..\\bmp\\gc_briefcase2_businessman_32.bmp"
+GC_PACKAGE_16 BITMAP "..\\bmp\\gc_package_16.bmp"
+GC_PACKAGE_32 BITMAP "..\\bmp\\gc_package_32.bmp"
+GC_PACKAGE_CIRCLE_16 BITMAP "..\\bmp\\gc_package_circle_16.bmp"
+GC_PACKAGE_CIRCLE_32 BITMAP "..\\bmp\\gc_package_circle_32.bmp"
+GC_FORKLIFT_16 BITMAP "..\\bmp\\gc_forklift_16.bmp"
+GC_FORKLIFT_32 BITMAP "..\\bmp\\gc_forklift_32.bmp"
+GC_PENCIL_PACKAGE_16 BITMAP "..\\bmp\\gc_pencil_package_16.bmp"
+GC_PENCIL_PACKAGE_32 BITMAP "..\\bmp\\gc_pencil_package_32.bmp"
+GC_WORKER_GROUP_16 BITMAP "..\\bmp\\gc_worker_group_16.bmp"
+GC_WORKER_GROUP_32 BITMAP "..\\bmp\\gc_worker_group_32.bmp"
+GC_WORKER2_16 BITMAP "..\\bmp\\gc_worker2_16.bmp"
+GC_WORKER2_32 BITMAP "..\\bmp\\gc_worker2_32.bmp"
+GC_WORKER2_CLOCK_16 BITMAP "..\\bmp\\gc_worker2_clock_16.bmp"
+GC_WORKER2_CLOCK_32 BITMAP "..\\bmp\\gc_worker2_clock_32.bmp"
