--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -271,3 +271,25 @@ GC_WORKER2_16 BITMAP "..\\bmp\\gc_worker2_16.bmp"
 GC_WORKER2_32 BITMAP "..\\bmp\\gc_worker2_32.bmp"
 GC_WORKER2_CLOCK_16 BITMAP "..\\bmp\\gc_worker2_clock_16.bmp"
 GC_WORKER2_CLOCK_32 BITMAP "..\\bmp\\gc_worker2_clock_32.bmp"
+GC_WORKER2_HAMMER_16 BITMAP "..\\bmp\\gc_worker2_hammer_16.bmp"
+GC_WORKER2_HAMMER_32 BITMAP "..\\bmp\\gc_worker2_hammer_32.bmp"
+GC_FOLDER_OPEN_WORKER_16 BITMAP "..\\bmp\\gc_folder_open_worker_16.bmp"
+GC_FOLDER_OPEN_WORKER_32 BITMAP "..\\bmp\\gc_folder_open_worker_32.bmp"
+GC_INDUSTRIAL_ROBOT_16 BITMAP "..\\bmp\\gc_industrial_robot_16.bmp"
+GC_INDUSTRIAL_ROBOT_32 BITMAP "..\\bmp\\gc_industrial_robot_32.bmp"
+GC_INDUSTRIAL_ROBOT_MONEY_16 BITMAP "..\\bmp\\gc_industrial_robot_money_16.bmp"
+GC_INDUSTRIAL_ROBOT_MONEY_32 BITMAP "..\\bmp\\gc_industrial_robot_money_32.bmp"
+GC_DOCUMENT_TEXT_WORKER_16 BITMAP "..\\bmp\\gc_document_text_worker_16.bmp"
+GC_DOCUMENT_TEXT_WORKER_32 BITMAP "..\\bmp\\gc_document_text_worker_32.bmp"
+GC_WORKER2_MONEY_16 BITMAP "..\\bmp\\gc_worker2_money_16.bmp"
+GC_WORKER2_MONEY_32 BITMAP "..\\bmp\\gc_worker2_money_32.bmp"
+GC_FOLDERS_16 BITMAP "..\\bmp\\gc_folders_16.bmp"
+GC_FOLDERS_32 BITMAP "..\\bmp\\gc_folders_32.bmp"
+GC_OFFICE_BUILDING2_16 BITMAP "..\\bmp\\gc_office_building2_16.bmp"
+GC_OFFICE_BUILDING2_32 BITMAP "..\\bmp\\gc_office_building2_32.bmp"
+GC_USERS_RELATION_16 BITMAP "..\\bmp\\gc_users_relation_16.bmp"
+GC_USERS_RELATION_32 BITMAP "..\\bmp\\gc_users_relation_32.bmp"
+GC_POWER_DRILL2_16 BITMAP "..\\bmp\\gc_power_drill2_16.bmp"
+GC_POWER_DRILL2_32 BITMAP "..\\bmp\\gc_power_drill2_32.bmp"
+GC_FOLDER_DOCUMENT_16 BITMAP "..\\bmp\\gc_folder_document_16.bmp"
+GC_FOLDER_DOCUMENT_32 BITMAP "..\\bmp\\gc_folder_document_32.bmp"
