--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -293,3 +293,5 @@ GC_POWER_DRILL2_16 BITMAP "..\\bmp\\gc_power_drill2_16.bmp"
 GC_POWER_DRILL2_32 BITMAP "..\\bmp\\gc_power_drill2_32.bmp"
 GC_FOLDER_DOCUMENT_16 BITMAP "..\\bmp\\gc_folder_document_16.bmp"
 GC_FOLDER_DOCUMENT_32 BITMAP "..\\bmp\\gc_folder_document_32.bmp"
+GC_DOOR_OPEN2_16 BITMAP "..\\bmp\\gc_door_open2_16.bmp"
+GC_DOOR_OPEN2_32 BITMAP "..\\bmp\\gc_door_open2_32.bmp"
