nueva opcion exportacion remesas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14501,7 +14501,8 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Utilizar fecha de vencimiento del recibo", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 40, 140, 10
   CONTROL "Agrupar recibos por clientes", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 53, 101, 11
-  CONTROL "Usar formato SEPA", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 67, 74, 10
+  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 133, 66, 60, 62
+  CONTROL "", 170, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 133, 81, 60, 62
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 50, 114, 296, 12
   CONTROL "&Aceptar [F5]", 550, "Button", WS_TABSTOP, 245, 135, 50, 15
   CONTROL "&Cancelar", 551, "Button", WS_TABSTOP, 300, 135, 50, 15
@@ -14509,8 +14510,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 29, 306, 71
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "", 150, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|WS_BORDER|WS_TABSTOP, 44, 153, 306, 205
-  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 133, 81, 60, 62
-  CONTROL "Esquema", -1, "Static", WS_GROUP, 49, 83, 35, 10
+  CONTROL "Esquema", -1, "Static", WS_GROUP, 49, 68, 35, 10
+  CONTROL "Tipo de sequencia", -1, "Static", WS_GROUP, 49, 83, 64, 10
 }
 
 MOVILGES DIALOG DISCARDABLE 278, 96, 290, 265
