--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -300,5 +300,7 @@ GC_FOLDER_OPEN_32 BITMAP "..\\bmp\\gc_folder_open_32.bmp"
 GC_FUNNEL_64 BITMAP "..\\bmp\\gc_funnel_64.bmp"
 GC_SAFE_INTO_48 BITMAP "..\\bmp\\gc_safe_into_48.bmp"
 GC_SAFE_OUT_48 BITMAP "..\\bmp\\gc_safe_out_48.bmp"
-SEL16 BITMAP "..\\bmp\\gc_checkbox_16.bmp"
-CNT16 BITMAP "..\\bmp\\gc_close_16.bmp"
+SEL16 BITMAP "..\\bmp\\gc_check_12.bmp"
+CNT16 BITMAP "..\\bmp\\gc_delete_12.bmp"
+GC_LOCK2_12 BITMAP "..\\bmp\\gc_lock2_12.bmp"
+ZOOM16 BITMAP "..\\bmp\\gc_lock2_16.bmp"
