--- a/resource/GstImageGC.rc
+++ b/resource/GstImageGC.rc
@@ -61,6 +61,7 @@ GC_DOCUMENT_TEXT_USER_16 BITMAP "..\\bmp\\gc_document_text_user_16.bmp"
 GC_DOCUMENT_TEXT_USER_32 BITMAP "..\\bmp\\gc_document_text_user_32.bmp"
 GC_DOCUMENT_TEXT_MONEY2_16 BITMAP "..\\bmp\\gc_document_text_money2_16.bmp"
 GC_DOCUMENT_TEXT_MONEY2_32 BITMAP "..\\bmp\\gc_document_text_money2_32.bmp"
+GC_DOCUMENT_TEXT_DELETE_12 BITMAP "..\\bmp\\gc_document_text_delete_12.bmp"
 GC_DOCUMENT_TEXT_DELETE_16 BITMAP "..\\bmp\\gc_document_text_delete_16.bmp"
 GC_DOCUMENT_TEXT_DELETE_32 BITMAP "..\\bmp\\gc_document_text_delete_32.bmp"
 GC_SMALL_TRUCK_USER_16 BITMAP "..\\bmp\\gc_small_truck_user_16.bmp"
@@ -147,6 +148,7 @@ GC_QUESTION_16 BITMAP "..\\bmp\\gc_question_16.bmp"
 GC_QUESTION_32 BITMAP "..\\bmp\\gc_question_32.bmp"
 GC_USER_HEADSET_16 BITMAP "..\\bmp\\gc_user_headset_16.bmp"
 GC_USER_HEADSET_32 BITMAP "..\\bmp\\gc_user_headset_32.bmp"
+GC_PRINTER2_12 BITMAP "..\\bmp\\gc_printer2_12.bmp"
 GC_PRINTER2_16 BITMAP "..\\bmp\\gc_printer2_16.bmp"
 GC_PRINTER2_32 BITMAP "..\\bmp\\gc_printer2_32.bmp"
 GC_OBJECT_CUBE_PRINT_16 BITMAP "..\\bmp\\gc_object_cube_print_16.bmp"
@@ -304,3 +306,23 @@ SEL16 BITMAP "..\\bmp\\gc_check_12.bmp"
 CNT16 BITMAP "..\\bmp\\gc_delete_12.bmp"
 GC_LOCK2_12 BITMAP "..\\bmp\\gc_lock2_12.bmp"
 ZOOM16 BITMAP "..\\bmp\\gc_lock2_16.bmp"
+CHGPRE16 BITMAP "..\\bmp\\gc_money2_16.bmp"
+GC_CHECK_12 BITMAP "..\\bmp\\gc_check_12.bmp"
+GC_DELETE_12 BITMAP "..\\bmp\\gc_delete_12.bmp"
+GC_SHAPE_SQUARE_12 BITMAP "..\\bmp\\GC_SHAPE_SQUARE_12.bmp"
+GC_FOLDER2_16 BITMAP "..\\bmp\\gc_folder2_16.bmp"
+GC_FOLDER2_12 BITMAP "..\\bmp\\gc_folder2_12.bmp"
+GC_MAIL2_16 BITMAP "..\\bmp\\gc_mail2_16.bmp"
+GC_MAIL2_12 BITMAP "..\\bmp\\gc_mail2_12.bmp"
+GC_HAND_PAPER_16 BITMAP "..\\bmp\\gc_hand_paper_16.bmp"
+GC_HAND_PAPER_12 BITMAP "..\\bmp\\gc_hand_paper_12.bmp"
+GC_EDI_16 BITMAP "..\\bmp\\gc_edi_16.bmp"
+GC_EDI_12 BITMAP "..\\bmp\\gc_edi_12.bmp"
+GC_DOCUMENT_EMPTY_WORLD_16 BITMAP "..\\bmp\\gc_document_empty_world_16.bmp"
+GC_DOCUMENT_EMPTY_WORLD_12 BITMAP "..\\bmp\\gc_document_empty_world_12.bmp"
+GC_DOCUMENT_INFORMATION_16 BITMAP "..\\bmp\\gc_document_information_16.bmp"
+GC_DOCUMENT_INFORMATION_12 BITMAP "..\\bmp\\gc_document_information_12.bmp"
+GC_MAIL_EARTH_16 BITMAP "..\\bmp\\gc_mail_earth_16.bmp"
+GC_MAIL_EARTH_12 BITMAP "..\\bmp\\gc_mail_earth_12.bmp"
+GC_SIGN_STOP_16 BITMAP "..\\bmp\\gc_sign_stop_16.bmp"
+GC_SIGN_STOP_12 BITMAP "..\\bmp\\gc_sign_stop_12.bmp"
