--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -326,4 +326,4 @@ GC_MAIL_EARTH_16 BITMAP "..\\bmp\\gc_mail_earth_16.bmp"
 GC_MAIL_EARTH_12 BITMAP "..\\bmp\\gc_mail_earth_12.bmp"
 GC_SIGN_STOP_16 BITMAP "..\\bmp\\gc_sign_stop_16.bmp"
 GC_SIGN_STOP_12 BITMAP "..\\bmp\\gc_sign_stop_12.bmp"
-GC_gc_trafficlight_on_16 BITMAP "..\\bmp\\gc_gc_trafficlight_on_16.bmp"
+gc_trafficlight_on_16 BITMAP "..\\bmp\\gc_trafficlight_on_16.bmp"
