--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -255,6 +255,7 @@ GC_DOCUMENT_EMPTY_BUSINESSMAN_16 BITMAP "..\\bmp\\gc_document_empty_businessman_
 GC_DOCUMENT_EMPTY_BUSINESSMAN_32 BITMAP "..\\bmp\\gc_document_empty_businessman_32.bmp"
 GC_DOCUMENT_TEXT_BUSINESSMAN_16 BITMAP "..\\bmp\\gc_document_text_businessman_16.bmp"
 GC_DOCUMENT_TEXT_BUSINESSMAN_32 BITMAP "..\\bmp\\gc_document_text_businessman_32.bmp"
+GC_DOCUMENT_TEXT_DELETE2_12 BITMAP "..\\bmp\\gc_document_text_delete2_12.bmp"
 GC_DOCUMENT_TEXT_DELETE2_16 BITMAP "..\\bmp\\gc_document_text_delete2_16.bmp"
 GC_DOCUMENT_TEXT_DELETE2_32 BITMAP "..\\bmp\\gc_document_text_delete2_32.bmp"
 GC_BRIEFCASE2_BUSINESSMAN_16 BITMAP "..\\bmp\\gc_briefcase2_businessman_16.bmp"
@@ -305,12 +306,12 @@ GC_SAFE_OUT_48 BITMAP "..\\bmp\\gc_safe_out_48.bmp"
 SEL16 BITMAP "..\\bmp\\gc_check_12.bmp"
 CNT16 BITMAP "..\\bmp\\gc_delete_12.bmp"
 GC_LOCK2_12 BITMAP "..\\bmp\\gc_lock2_12.bmp"
+GC_LOCK2_16 BITMAP "..\\bmp\\gc_lock2_16.bmp"
 ZOOM16 BITMAP "..\\bmp\\gc_lock2_16.bmp"
 CHGPRE16 BITMAP "..\\bmp\\gc_money2_16.bmp"
 GC_CHECK_12 BITMAP "..\\bmp\\gc_check_12.bmp"
 GC_DELETE_12 BITMAP "..\\bmp\\gc_delete_12.bmp"
 GC_SHAPE_SQUARE_12 BITMAP "..\\bmp\\GC_SHAPE_SQUARE_12.bmp"
-GC_FOLDER2_16 BITMAP "..\\bmp\\gc_folder2_16.bmp"
 GC_FOLDER2_12 BITMAP "..\\bmp\\gc_folder2_12.bmp"
 GC_MAIL2_16 BITMAP "..\\bmp\\gc_mail2_16.bmp"
 GC_MAIL2_12 BITMAP "..\\bmp\\gc_mail2_12.bmp"
@@ -326,4 +327,9 @@ GC_MAIL_EARTH_16 BITMAP "..\\bmp\\gc_mail_earth_16.bmp"
 GC_MAIL_EARTH_12 BITMAP "..\\bmp\\gc_mail_earth_12.bmp"
 GC_SIGN_STOP_16 BITMAP "..\\bmp\\gc_sign_stop_16.bmp"
 GC_SIGN_STOP_12 BITMAP "..\\bmp\\gc_sign_stop_12.bmp"
-gc_trafficlight_on_16 BITMAP "..\\bmp\\gc_trafficlight_on_16.bmp"
+GC_TRAFFICLIGHT_ON_16 BITMAP "..\\bmp\\gc_trafficlight_on_16.bmp"
+
+IMP16 BITMAP "..\\bmp\\gc_printer2_16.bmp"
+END16 BITMAP "..\\bmp\\gc_door_exit_16.bmp"
+LBL16 BITMAP "..\\bmp\\gc_mail2_16.bmp"
+BMPCONTA16 BITMAP "..\\bmp\\gc_folder2_16.bmp"
