--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -333,3 +333,5 @@ IMP16 BITMAP "..\\bmp\\gc_printer2_16.bmp"
 END16 BITMAP "..\\bmp\\gc_door_exit_16.bmp"
 LBL16 BITMAP "..\\bmp\\gc_mail2_16.bmp"
 BMPCONTA16 BITMAP "..\\bmp\\gc_folder2_16.bmp"
+
+GC_FOLDER_OPEN_CHECK_16 BITMAP "..\\bmp\\gc_folder_open_check_16.bmp"
