--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -142,6 +142,7 @@ GC_CURRENCY_EURO_16 BITMAP "..\\bmp\\gc_currency_euro_16.bmp"
 GC_CURRENCY_EURO_32 BITMAP "..\\bmp\\gc_currency_euro_32.bmp"
 GC_LIFEBELT_16 BITMAP "..\\bmp\\gc_lifebelt_16.bmp"
 GC_LIFEBELT_32 BITMAP "..\\bmp\\gc_lifebelt_32.bmp"
+GC_EARTH_12 BITMAP "..\\bmp\\gc_earth_12.bmp"
 GC_EARTH_16 BITMAP "..\\bmp\\gc_earth_16.bmp"
 GC_EARTH_32 BITMAP "..\\bmp\\gc_earth_32.bmp"
 GC_QUESTION_16 BITMAP "..\\bmp\\gc_question_16.bmp"
@@ -333,5 +334,7 @@ IMP16 BITMAP "..\\bmp\\gc_printer2_16.bmp"
 END16 BITMAP "..\\bmp\\gc_door_exit_16.bmp"
 LBL16 BITMAP "..\\bmp\\gc_mail2_16.bmp"
 BMPCONTA16 BITMAP "..\\bmp\\gc_folder2_16.bmp"
+SNDINT16 BITMAP "..\\bmp\\gc_earth_16.bmp"
+
 
 GC_FOLDER_OPEN_CHECK_16 BITMAP "..\\bmp\\gc_folder_open_check_16.bmp"
