--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -196,6 +196,7 @@ GC_PHOTOGRAPHIC_FILTERS_16 BITMAP "..\\bmp\\gc_photographic_filters_16.bmp"
 GC_PHOTOGRAPHIC_FILTERS_32 BITMAP "..\\bmp\\gc_photographic_filters_32.bmp"
 GC_CLOUD_SUN_16 BITMAP "..\\bmp\\gc_cloud_sun_16.bmp"
 GC_CLOUD_SUN_32 BITMAP "..\\bmp\\gc_cloud_sun_32.bmp"
+GC_SYMBOL_PERCENT_12 BITMAP "..\\bmp\\gc_symbol_percent_12.bmp"
 GC_SYMBOL_PERCENT_16 BITMAP "..\\bmp\\gc_symbol_percent_16.bmp"
 GC_SYMBOL_PERCENT_32 BITMAP "..\\bmp\\gc_symbol_percent_32.bmp"
 GC_BOX_CLOSED_16 BITMAP "..\\bmp\\gc_box_closed_16.bmp"
@@ -336,5 +337,6 @@ LBL16 BITMAP "..\\bmp\\gc_mail2_16.bmp"
 BMPCONTA16 BITMAP "..\\bmp\\gc_folder2_16.bmp"
 SNDINT16 BITMAP "..\\bmp\\gc_earth_16.bmp"
 
-
 GC_FOLDER_OPEN_CHECK_16 BITMAP "..\\bmp\\gc_folder_open_check_16.bmp"
+GC_ID_CARD_HINT_12 BITMAP "..\\bmp\\gc_id_card_hint_12.bmp"
+GC_ID_CARD_HINT_16 BITMAP "..\\bmp\\gc_id_card_hint_16.bmp"
