--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -57,6 +57,7 @@ GC_NOTEBOOK_USER_16 BITMAP "..\\bmp\\gc_notebook_user_16.bmp"
 GC_NOTEBOOK_USER_32 BITMAP "..\\bmp\\gc_notebook_user_32.bmp"
 GC_CLIPBOARD_EMPTY_USER_16 BITMAP "..\\bmp\\gc_clipboard_empty_user_16.bmp"
 GC_CLIPBOARD_EMPTY_USER_32 BITMAP "..\\bmp\\gc_clipboard_empty_user_32.bmp"
+GC_DOCUMENT_TEXT_USER_12 BITMAP "..\\bmp\\gc_document_text_user_12.bmp"
 GC_DOCUMENT_TEXT_USER_16 BITMAP "..\\bmp\\gc_document_text_user_16.bmp"
 GC_DOCUMENT_TEXT_USER_32 BITMAP "..\\bmp\\gc_document_text_user_32.bmp"
 GC_DOCUMENT_TEXT_MONEY2_16 BITMAP "..\\bmp\\gc_document_text_money2_16.bmp"
@@ -336,7 +337,10 @@ END16 BITMAP "..\\bmp\\gc_door_exit_16.bmp"
 LBL16 BITMAP "..\\bmp\\gc_mail2_16.bmp"
 BMPCONTA16 BITMAP "..\\bmp\\gc_folder2_16.bmp"
 SNDINT16 BITMAP "..\\bmp\\gc_earth_16.bmp"
+BMPEXPTAR16 BITMAP "..\\bmp\\gc_floppy_disk_16.bmp"
 
 GC_FOLDER_OPEN_CHECK_16 BITMAP "..\\bmp\\gc_folder_open_check_16.bmp"
 GC_ID_CARD_HINT_12 BITMAP "..\\bmp\\gc_id_card_hint_12.bmp"
 GC_ID_CARD_HINT_16 BITMAP "..\\bmp\\gc_id_card_hint_16.bmp"
+GC_FLOPPY_DISK_12 BITMAP "..\\bmp\\gc_floppy_disk_12.bmp"
+GC_FLOPPY_DISK_16 BITMAP "..\\bmp\\gc_floppy_disk_16.bmp"
